byyl/bianyi2016-11-29 /syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt

    7 ExtDecList: VarDec
    8           | VarDec COMMA ExtDecList

    9 Specifier: TYPE
   10          | StructSpecifier

   11 StructSpecifier: STRUCT OptTag LC DefList RC
   12                | STRUCT Tag

   13 OptTag: ID
   14       | %empty

   15 Tag: ID

   16 VarDec: ID
   17       | VarDec LB INT RB

   18 FunDec: ID LP VarList RP
   19       | ID LP RP

   20 VarList: ParamDec COMMA VarList
   21        | ParamDec

   22 ParamDec: Specifier VarDec

   23 CompSt: LC DefList StmtList RC

   24 StmtList: Stmt StmtList
   25         | %empty

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | error SEMI

   33 DefList: Def DefList
   34        | %empty

   35 Def: Specifier DecList SEMI
   36    | Specifier SEMI

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp DOT Exp
   56    | ID
   57    | INT
   58    | FLOAT
   59    | error RB
   60    | error RP
   61    | error ASSIGNOP Exp
   62    | error RELOP Exp
   63    | error PLUS Exp
   64    | error MINUS Exp
   65    | error STAR Exp
   66    | error DIV Exp
   67    | Exp ASSIGNOP error
   68    | Exp RELOP error
   69    | Exp PLUS error
   70    | Exp MINUS error
   71    | Exp STAR error
   72    | Exp DIV error

   73 Args: Exp COMMA Args
   74     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 32 59 60 61 62 63 64 65 66 67 68 69 70 71 72
RETURN (258) 28
STRUCT (259) 11 12
TYPE (260) 9
IF (261) 29 30
ELSE (262) 30
WHILE (263) 31
INT (264) 17 57
FLOAT (265) 58
ID (266) 13 15 16 18 19 52 53 56
SEMI (267) 4 5 26 28 32 35 36
COMMA (268) 8 20 38 73
LC (269) 11 23
RC (270) 11 23
ASSIGNOP (271) 40 41 61 67
OR (272) 43
AND (273) 42
RELOP (274) 44 62 68
PLUS (275) 45 63 69
MINUS (276) 46 50 64 70
STAR (277) 47 65 71
DIV (278) 48 66 72
LP (279) 18 19 29 30 31 49 52 53
RP (280) 18 19 29 30 31 49 52 53 60
LB (281) 17 54
RB (282) 17 54 59
DOT (283) 55
NOT (284) 51
LOWER_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6, on right: 2
ExtDecList (35)
    on left: 7 8, on right: 4 8
Specifier (36)
    on left: 9 10, on right: 4 5 6 22 35 36
StructSpecifier (37)
    on left: 11 12, on right: 10
OptTag (38)
    on left: 13 14, on right: 11
Tag (39)
    on left: 15, on right: 12
VarDec (40)
    on left: 16 17, on right: 7 8 17 22 39 40
FunDec (41)
    on left: 18 19, on right: 6
VarList (42)
    on left: 20 21, on right: 18 20
ParamDec (43)
    on left: 22, on right: 20 21
CompSt (44)
    on left: 23, on right: 6 27
StmtList (45)
    on left: 24 25, on right: 23 24
Stmt (46)
    on left: 26 27 28 29 30 31 32, on right: 24 29 30 31
DefList (47)
    on left: 33 34, on right: 11 23 33
Def (48)
    on left: 35 36, on right: 33
DecList (49)
    on left: 37 38, on right: 35 38
Dec (50)
    on left: 39 40, on right: 37 38
Exp (51)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 68 69 70 71 72, on right: 26 28 29 30
    31 40 41 42 43 44 45 46 47 48 49 50 51 54 55 61 62 63 64 65 66
    67 68 69 70 71 72 73 74
Args (52)
    on left: 73 74, on right: 52 73


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   11 StructSpecifier: STRUCT . OptTag LC DefList RC
   12                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 14 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 2

    9 Specifier: TYPE .

    $default  reduce using rule 9 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 13
    SEMI  shift, and go to state 14

    ExtDecList  转到状态 15
    VarDec      转到状态 16
    FunDec      转到状态 17


State 7

   10 Specifier: StructSpecifier .

    $default  reduce using rule 10 (Specifier)


State 8

   13 OptTag: ID .
   15 Tag: ID .

    LC        reduce using rule 13 (OptTag)
    $default  reduce using rule 15 (Tag)


State 9

   11 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 18


State 10

   12 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 12 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

   16 VarDec: ID .
   18 FunDec: ID . LP VarList RP
   19       | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 16 (VarDec)


State 14

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    7 ExtDecList: VarDec .
    8           | VarDec . COMMA ExtDecList
   17 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 7 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 23

    CompSt  转到状态 24


State 18

   11 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 26
    Def              转到状态 27


State 19

   18 FunDec: ID LP . VarList RP
   19       | ID LP . RP

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 28

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    VarList          转到状态 30
    ParamDec         转到状态 31


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    8 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  转到状态 33
    VarDec      转到状态 16


State 22

   17 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 34


State 23

   23 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 35
    Def              转到状态 27


State 24

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 25

   35 Def: Specifier . DecList SEMI
   36    | Specifier . SEMI

    ID    shift, and go to state 32
    SEMI  shift, and go to state 36

    VarDec   转到状态 37
    DecList  转到状态 38
    Dec      转到状态 39


State 26

   11 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 40


State 27

   33 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 34 (DefList)

    Specifier        转到状态 25
    StructSpecifier  转到状态 7
    DefList          转到状态 41
    Def              转到状态 27


State 28

   19 FunDec: ID LP RP .

    $default  reduce using rule 19 (FunDec)


State 29

   22 ParamDec: Specifier . VarDec

    ID  shift, and go to state 32

    VarDec  转到状态 42


State 30

   18 FunDec: ID LP VarList . RP

    RP  shift, and go to state 43


State 31

   20 VarList: ParamDec . COMMA VarList
   21        | ParamDec .

    COMMA  shift, and go to state 44

    $default  reduce using rule 21 (VarList)


State 32

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 33

    8 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 8 (ExtDecList)


State 34

   17 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 45


State 35

   23 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 46
    RETURN  shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    LC      shift, and go to state 23
    MINUS   shift, and go to state 53
    LP      shift, and go to state 54
    NOT     shift, and go to state 55

    RC  reduce using rule 25 (StmtList)

    CompSt    转到状态 56
    StmtList  转到状态 57
    Stmt      转到状态 58
    Exp       转到状态 59


State 36

   36 Def: Specifier SEMI .

    $default  reduce using rule 36 (Def)


State 37

   17 VarDec: VarDec . LB INT RB
   39 Dec: VarDec .
   40    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 60
    LB        shift, and go to state 22

    $default  reduce using rule 39 (Dec)


State 38

   35 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 61


State 39

   37 DecList: Dec .
   38        | Dec . COMMA DecList

    COMMA  shift, and go to state 62

    $default  reduce using rule 37 (DecList)


State 40

   11 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 11 (StructSpecifier)


State 41

   33 DefList: Def DefList .

    $default  reduce using rule 33 (DefList)


State 42

   17 VarDec: VarDec . LB INT RB
   22 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 22 (ParamDec)


State 43

   18 FunDec: ID LP VarList RP .

    $default  reduce using rule 18 (FunDec)


State 44

   20 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    VarList          转到状态 63
    ParamDec         转到状态 31


State 45

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 46

   32 Stmt: error . SEMI
   59 Exp: error . RB
   60    | error . RP
   61    | error . ASSIGNOP Exp
   62    | error . RELOP Exp
   63    | error . PLUS Exp
   64    | error . MINUS Exp
   65    | error . STAR Exp
   66    | error . DIV Exp

    SEMI      shift, and go to state 64
    ASSIGNOP  shift, and go to state 65
    RELOP     shift, and go to state 66
    PLUS      shift, and go to state 67
    MINUS     shift, and go to state 68
    STAR      shift, and go to state 69
    DIV       shift, and go to state 70
    RP        shift, and go to state 71
    RB        shift, and go to state 72


State 47

   28 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 74


State 48

   29 Stmt: IF . LP Exp RP Stmt
   30     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 49

   31 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 50

   57 Exp: INT .

    $default  reduce using rule 57 (Exp)


State 51

   58 Exp: FLOAT .

    $default  reduce using rule 58 (Exp)


State 52

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   56    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 56 (Exp)


State 53

   50 Exp: MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 78


State 54

   49 Exp: LP . Exp RP

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 79


State 55

   51 Exp: NOT . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 80


State 56

   27 Stmt: CompSt .

    $default  reduce using rule 27 (Stmt)


State 57

   23 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 81


State 58

   24 StmtList: Stmt . StmtList

    error   shift, and go to state 46
    RETURN  shift, and go to state 47
    IF      shift, and go to state 48
    WHILE   shift, and go to state 49
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    LC      shift, and go to state 23
    MINUS   shift, and go to state 53
    LP      shift, and go to state 54
    NOT     shift, and go to state 55

    RC  reduce using rule 25 (StmtList)

    CompSt    转到状态 56
    StmtList  转到状态 82
    Stmt      转到状态 58
    Exp       转到状态 59


State 59

   26 Stmt: Exp . SEMI
   41 Exp: Exp . ASSIGNOP Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . PLUS Exp
   46    | Exp . MINUS Exp
   47    | Exp . STAR Exp
   48    | Exp . DIV Exp
   54    | Exp . LB Exp RB
   55    | Exp . DOT Exp
   67    | Exp . ASSIGNOP error
   68    | Exp . RELOP error
   69    | Exp . PLUS error
   70    | Exp . MINUS error
   71    | Exp . STAR error
   72    | Exp . DIV error

    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 84
    OR        shift, and go to state 85
    AND       shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    LB        shift, and go to state 92
    DOT       shift, and go to state 93


State 60

   40 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 94


State 61

   35 Def: Specifier DecList SEMI .

    $default  reduce using rule 35 (Def)


State 62

   38 DecList: Dec COMMA . DecList

    ID  shift, and go to state 32

    VarDec   转到状态 37
    DecList  转到状态 95
    Dec      转到状态 39


State 63

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


State 64

   32 Stmt: error SEMI .

    $default  reduce using rule 32 (Stmt)


State 65

   61 Exp: error ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 96


State 66

   62 Exp: error RELOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 97


State 67

   63 Exp: error PLUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 98


State 68

   64 Exp: error MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 99


State 69

   65 Exp: error STAR . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 100


State 70

   66 Exp: error DIV . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    NOT    shift, and go to state 55

    Exp  转到状态 101


State 71

   60 Exp: error RP .

    $default  reduce using rule 60 (Exp)


State 72

   59 Exp: error RB .

    $default  reduce using rule 59 (Exp)


State 73
